# prim-bool

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  hie.yaml  prim-bool.cabal  release.nix  shell.nix  unlifted-bool.cabal
.github/workflows/: ghc922.yml  ghc924.yml
example/: Main.hs
examples/: Example.hs
nix/: nixpkgs.nix  pkgs.nix
nix/extensions/: prim-compat.nix
nix/exts/: prim-bool.nix  tasty-hedgehog.nix
nix/haskell-packages/: prim-compat.nix
nix/overlays/: haskell.nix
nix/pkgs/: prim-bool.nix  prim-compat.nix  tasty-hedgehog.nix
src/Data/Bool/: Prim.hs  Unlifted.hs
src/Data/Bool/Prim/: Core.hs  Rep.hs
src/Data/Bool/Unlifted/: Core.hs  Rep.hs
test/: Test.hs
test/Test/: Bool.hs  Compat.hs  Core.hs
test/Test/Bool/: Comparison.hs  Conversion.hs  Fuzz.hs  Logical.hs
test/Test/Bool/Fuzz/: Expr.hs  Lit.hs
test/Test/Bool/Fuzz/Expr/: Core.hs  Gen.hs
test/Test/Bool/Fuzz/Lit/: Core.hs  Gen.hs
