cabal-version: 2.4

name:        prim-bool
category:    Data
version:     1.0.1
synopsis:    Unboxed booleans.
description: An unboxed boolean type with safe pattern matching.

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/prim-bool
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.2
  GHC == 9.0.2

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

  if flag(llvm) 
    ghc-options: -fllvm 

  build-depends:
    , base >= 4.15.1 && < 4.17

library
  import:         common
  hs-source-dirs: src

  default-extensions:
    MagicHash

  ghc-options:
    -- `-j4` is set (as opposed to `-j`) due to the small number of modules that 
    -- are exported by this module.
    -j4

    -- `-O` is explicitly set since none of the functions exported by this 
    -- library would benefit from higher optimization levels. This helps reduce 
    -- compile times. 
    -O

    -- `-fregs-iterative` enables the iterative graph coloring register 
    -- allocator. This is hardly affects compile times and can produce code with
    -- fewer heap allocations.
    -fregs-iterative

    -- `-fmax-simplifier-iterations` is set to keep compile times in check. 
    -- The functions in this library are simple and do not need very many 
    -- simplifier passes.
    -fmax-simplifier-iterations=2

  build-depends:
    , ghc-prim         >= 0.7.0  && < 0.9
    , prim-compat      >= 1.0.0  && < 1.1.0
    , template-haskell >= 2.17.0 && < 2.19

  exposed-modules:
    Data.Bool.Prim
    Data.Bool.Prim.Rep

  other-modules:
    Data.Bool.Prim.Core

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , hedgehog
    , prim-bool
    , tasty
    , tasty-hedgehog 

source-repository head
  type:     git
  location: https://github.com/riz0id/prim-bool
