cabal-version: 2.4

name:        prim-bool
category:    Data
version:     1.0.0
synopsis:    Unboxed booleans.
description: An unboxed boolean type with safe pattern matching.

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/prim-bool
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.0.2
  GHC == 9.2.2
  GHC == 9.2.4
  GHC == 9.4.2

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  default-extensions:
    ImportQualifiedPost MagicHash

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

    -ddump-to-file
    -ddump-stg-final
    -ddump-simpl
    -dppr-cols=120
    -dsuppress-module-prefixes
    -dsuppress-uniques

  if flag(llvm) 
    ghc-options: -fllvm 

  build-depends:
    , base >= 4.15.1 && < 4.18

library
  import:         common
  hs-source-dirs: src

  ghc-options:
    -- `-j4` is set (as opposed to `-j`) due to the small number of modules that 
    -- are exported by this package.
    -j4

    -- `-O` is explicitly set since none of the functions exported by this 
    -- library would benefit from higher optimization levels. This helps reduce 
    -- compile times. 
    -O

    -- `-fmax-simplifier-iterations` is set to keep compile times in check. 
    -- The functions in this library are simple and do not need very many 
    -- simplifier passes.
    -fmax-simplifier-iterations=4

    -- `-fregs-iterative` enable the iterative graph coloring register 
    -- allocator.
    -fregs-iterative

  build-depends:
    , ghc-prim         >= 0.7.0  && < 0.10
    , prim-compat      >= 1.0.0  && < 1.1.0
    , template-haskell >= 2.17.0 && < 2.20

  exposed-modules:
    Data.Bool.Prim

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  default-extensions:
    BlockArguments GADTs ImportQualifiedPost KindSignatures MagicHash 
    ViewPatterns

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , hedgehog
    , prim-bool
    , tasty
    , tasty-hedgehog 

  other-modules: 
    Test.Compat
    Test.Core
    Test.Bool
    Test.Bool.Fuzz
    Test.Bool.Fuzz.Expr
    Test.Bool.Fuzz.Expr.Core
    Test.Bool.Fuzz.Expr.Gen
    Test.Bool.Fuzz.Lit
    Test.Bool.Fuzz.Lit.Core
    Test.Bool.Fuzz.Lit.Gen
    Test.Bool.Comparison
    Test.Bool.Conversion
    Test.Bool.Logical

executable example
  import:         common
  hs-source-dirs: example
  main-is:        Main.hs
  build-depends:  prim-bool
  ghc-options:    -O2

source-repository head
  type:     git
  location: https://github.com/riz0id/prim-bool
