cabal-version: 2.4

name:         unlifted-bool
category:     Data
version:      0.1.1.0
synopsis:     An unlifted boolean type.
description:  An unlifted boolean type with safe pattern matching.
license:      BSD-3-Clause
license-file: LICENSE
build-type:   Simple

author:     jake
maintainer: jacobleach@protonmail.com
copyright:  2022, Jacob Leach

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.1

common common
  default-language: Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Wmissing-import-lists
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Widentities
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages

  build-depends:
    , base

library
  import:         common
  hs-source-dirs: src

  exposed-modules:
    Data.Bool.Unlifted

  build-depends:
    , ghc-prim

source-repository head
  type:     git
  location: https://github.com/riz0id/unlifted-bool
